--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
-    "drizzle-orm": "^0.45.1",
+    "drizzle-orm": "^1.0.0-beta.9-e89174b",
     "hono": "^4.11.3",
     "pg": "^8.16.3",
     "postgres": "^3.4.8",
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@types/bun": "^1.3.5",
     "@types/pg": "^8.16.0",
-    "drizzle-kit": "^0.31.8",
+    "drizzle-kit": "^1.0.0-beta.9-e89174b",
     "tsx": "^4.21.0"
   }
 }
