--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
     "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts",
-    "db:studio": "bunx drizzle-kit studio"
+    "db:studio": "bunx drizzle-kit studio",
+    "db:push": "bunx drizzle-kit push"
   },
   "dependencies": {
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
-    "drizzle-orm": "^1.0.0-beta.9-e89174b",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
     "pg": "^8.16.3",
     "postgres": "^3.4.8",
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@types/bun": "^1.3.5",
     "@types/pg": "^8.16.0",
-    "drizzle-kit": "^1.0.0-beta.9-e89174b",
+    "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0"
   }
 }
