--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:push": "bunx drizzle-kit push"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.6",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
