--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.6",
     "cross-env": "^10.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.45.1",
+    "gramio": "^0.4.11",
     "hono": "^4.11.3",
     "pg": "^8.16.3",
     "postgres": "^3.4.8",
