--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.45.1",
     "gramio": "^0.4.11",
     "hono": "^4.11.3",
+    "iovalkey": "^0.3.3",
     "pg": "^8.16.3",
     "postgres": "^3.4.8",
     "zod": "^4.3.5"
